Changed interest var from secrect to var

--- a/.github/workflows/lend-cron.yml
+++ b/.github/workflows/lend-cron.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   lend:
     runs-on: ubuntu-latest
+    environment: LENDER_INTEREST_RATE
     steps:
       - uses: actions/checkout@v3
 
