Added a functionality filter based on cibil score and to give loans to repayers

--- a/.github/workflows/lend-cron.yml
+++ b/.github/workflows/lend-cron.yml
@@ -30,6 +30,10 @@ env:
   REPO_OWNER : ${{ secrets.REPO_OWNER }}
   REPO_NAME : ${{ secrets.REPO_NAME }}
   LENDER_INTEREST_RATE: ${{ vars.LENDER_INTEREST_RATE }}
+  LENDER_CIBIL_RATE: ${{ vars.LENDER_CIBIL_RATE }}
+  LENDER_CIBIL_REPEATED_RATE: ${{ vars.LENDER_CIBIL_REPEATED_RATE }}
+  LENDING_LOAN_AMOUNT: ${{ vars.LENDING_LOAN_AMOUNT }}
+  LENDING_LOAN_REPEATED_AMOUNT: ${{ vars.LENDING_LOAN_REPEATED_AMOUNT }}
 # LENDER_API_KEY: ${{ secrets.LENDER_API_KEY }}
 # LENDER_API_SECRET: ${{ secrets.LENDER_API_SECRET }}
 # LENDER_ACCOUNT_ID: ${{ secrets.LENDER_ACCOUNT_ID }}
