Added vars for loans serach limit and var for controlling to give to repeated or normal people and var to check loans even if balacne is zero

--- a/.github/workflows/lend-cron.yml
+++ b/.github/workflows/lend-cron.yml
@@ -34,6 +34,9 @@ env:
   LENDER_CIBIL_REPEATED_RATE: ${{ vars.LENDER_CIBIL_REPEATED_RATE }}
   LENDING_LOAN_AMOUNT: ${{ vars.LENDING_LOAN_AMOUNT }}
   LENDING_LOAN_REPEATED_AMOUNT: ${{ vars.LENDING_LOAN_REPEATED_AMOUNT }}
+  LENDING_TO_REPEATED_PEOPLE : ${{ vars.LENDING_TO_REPEATED_PEOPLE }}
+  LENDING_LOANS_SEARCH_LIMIT : ${{ vars.LENDING_LOANS_SEARCH_LIMIT }}
+  CHECK_LOANS_IF_BALANCE_IS_ZERO : ${{ vars.CHECK_LOANS_IF_BALANCE_IS_ZERO }}
 # LENDER_API_KEY: ${{ secrets.LENDER_API_KEY }}
 # LENDER_API_SECRET: ${{ secrets.LENDER_API_SECRET }}
 # LENDER_ACCOUNT_ID: ${{ secrets.LENDER_ACCOUNT_ID }}
